Description: Grant Leak when osc reconnect to OST
Details    : When osc reconnect ost, OST(filter) should check whether it
	     should grant more space to client by comparing fed_grant and
	     cl_avail_grant, and return the granted space to client instead
	     of "new granted" space, because client will call osc_init_grant
	     to update the client grant space info.

Severity   : normal
Frequency  : when client is evicted 
Bugzilla   : 12371
Description: Grant might be wrongly erased when osc is evicted by OST
Details    : when the import is evicted by server, it will fork another 
	     thread ptlrpc_invalidate_import_thread to invalidate the 
	     import, where the grant will be set to 0.  While the original 
	     thread will update the grant it got when connecting. So if 
	     the former happened latter, the grant will be wrongly errased 
	     because of this race.

Severity   : normal
Frequency  : rare 
Bugzilla   : 12401
Description: Checking Stale with correct fid 
Details    : ll_revalidate_it should uses de_inode instead of op_data.fid2 
	     to check whether it is stale, because sometimes, we want the 
	     enqueue happened anyway, and op_data.fid2 will not be initialized.
     
Severity   : enhancement
Bugzilla   : 11647
Description: update patchless client
Details    : Add support for patchless client with 2.6.20, 2.6.21 and RHEL 5

Severity   : normal
Frequency  : only with 2.4 kernel
Bugzilla   : 12134
Description: random memory corruption
Details    : size of struct ll_inode_info is to big for union inode.u and this
             can be cause of random memory corruption.

Severity   : normal
Frequency  : rare 
Bugzilla   : 10818
Description: Memory leak in recovery
Details    : Lov_mds_md was not free in an error handler in mds_create_object.
             It should also check obd_fail before fsfilt_start, otherwise if 
             fsfilt_start return -EROFS,(failover mds during mds recovery).